Slider: Fixed inner shadow for the input on iOS.

--- a/css/structure/jquery.mobile.forms.slider.css
+++ b/css/structure/jquery.mobile.forms.slider.css
@@ -31,6 +31,7 @@ input.ui-slider-input {
 	text-align: center;
 	vertical-align: text-bottom;
 	outline: 0;
+	-webkit-appearance: none;
 	-webkit-box-sizing: content-box;
 	-moz-box-sizing: content-box;
 	-ms-box-sizing: content-box;
